Added instructions and logo css

--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
     
     <img src="/images/logo.png" class="logo" alt="Box Office Bombs">
 
+    <h2 id="instructions">Guess which film made more money in the box office.</h2>
+
     <div class="wrapper">
-    <button class="playBtn">Play</button>
+        <button class="playBtn">Play</button>
     </div>
 
     <script src="/js/main.js"></script>
