JS randomize two items in array

--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
     <div id="content" style="display: none;">
         <section>
             <div id="column1">
-                <p id="title"><b>Title: </b></p>
-                <p id="value"><b>Value: </b></p>
+                <p id="title1"><b>Title: </b></p>
+                <p id="value1"><b>Value: </b></p>
             </div>
             <div id="column2">
                 <p id="title2"><b>Title: </b></p>
                 <p id="value2"><b>Value: </b></p>
-                <button type="button" id="higher">Higher</button>
-                <button type="button" id="lower">Lower</button>
+                <button id="higher">Higher</button>
+                <button id="lower">Lower</button>
             </div>
         </section>
     </div>
