Added scoreboard and high/low logic - not 100%

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                 <button id="higher">Higher</button>
                 <button id="lower">Lower</button>
             </div>
+            <p id="scoreboard">Score: </p>
         </section>
     </div>
 
