Columns successfully transition b>a , c>b

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </div>
 
     <div id="content" style="display: none;">
-        <section>
+        <section id="columns">
             <div id="column1">
                 <p id="title1"><b>Title: </b></p>
                 <p id="value1"><b>Value: </b></p>
