--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     </div>
 
     <div id="content" style="display: none;">
+        <a href="/"><img src="/images/logo.png" class="logo" alt="Box Office Bombs"></a>
         <section id="columns">
             <div id="column1">
                 <p id="title1"><b>Title: </b></p>
@@ -29,11 +30,11 @@
             <div id="column2">
                 <p id="title2"><b>Title: </b></p>
                 <p id="value2"><b>Value: </b></p>
-                <button id="higher">Higher</button>
-                <button id="lower">Lower</button>
+                    <button id="higher">Higher</button>
+                    <button id="lower">Lower</button>
             </div>
-            <p id="scoreboard">Score: </p>
         </section>
+        <p id="scoreboard">Score: </p>
     </div>
 
     <script src="/js/main.js"></script>
