CSS color changes and removing unneeded lines

--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
     <title>Box Office Bombs</title>
 </head>
 <body>
-
+    <a href="/"><img src="/images/logo.png" class="logo" alt="Box Office Bombs"></a>
     <div id="homepage">
-        <a href="/"><img src="/images/logo.png" class="logo" alt="Box Office Bombs"></a>
         <h2 id="instructions">Guess which film made more money in the box office.</h2>
         <div class="wrapper">
             <button id="playBtn">Play</button>
@@ -21,7 +20,6 @@
     </div>
 
     <div id="content" style="display: none;">
-        <a href="/"><img src="/images/logo.png" class="logo" alt="Box Office Bombs"></a>
         <section id="columns">
             <div id="column1">
                 <p id="title1"><b>Title: </b></p>
@@ -34,7 +32,7 @@
                 <button id="lower">Lower</button>
             </div>
         </section>
-        <p id="scoreboard">Score: </p>
+        <p id="scoreboard">Score: 0</p>
     </div>
 
     <script src="/js/main.js"></script>
