--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Addictive game where you compare two films and guess which one made more money.">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:300,400"/>
     <title>Box Office Bombs</title>
@@ -28,8 +29,8 @@
             <div id="column2">
                 <p id="title2"><b>Title: </b></p>
                 <p id="value2"><b>Value: </b></p>
-                <button id="higher">Higher</button>
-                <button id="lower">Lower</button>
+                <button id="higher">Higher <i class="fa fa-angle-double-up"></i></button>
+                <button id="lower">Lower <i class="fa fa-angle-double-down"></i></button>
             </div>
         </section>
         <p id="scoreboard">Score: 0</p>
