Added "vs" circle and syntax changes

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
             <div id="column1">
                 <p id="title1"><b>Title: </b></p>
                 <p id="value1"><b>Value: </b></p>
+                <div class="disc">
+                    <p id="vs">VS</p>
+                </div>
             </div>
             <div id="column2">
                 <p id="title2"><b>Title: </b></p>
