Play again button, removed lose screen "x", removed placeholder alerts, css changes

--- a/index.html
+++ b/index.html
@@ -40,15 +40,13 @@
 
         <div id="lose">
             <div class="lose-content">
-              <span class="close">&times;</span>
-                <h1 style="color:white; text-align: center; font-weight: bold; font-size: 32px">That was embarrassing...</h1>
-                <h3 id="scoreboard2" style="font-size: 20px; text-align: center;">You Scored: 0</h3>
+                <h1 id="loseheader">That was embarrassing...</h1>
+                <h3 id="scoreboard2">You Scored: 0</h3>
                 <img src="images/embarrassing.gif" id="embarrassing" alt="You Lose"/>
                 <br>
                 <button id="playAgain">Play Again?</button>    
             </div>
         </div>
-
     </div>
 
     <script src="/js/main.js"></script>
