--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Box Office Bombs</title>
 </head>
 <body>
-    <a href="/"><img src="/images/logo.png" class="logo" alt="Box Office Bombs"></a>
+    <a href="about.html"><img src="/images/logo.png" class="logo" alt="Box Office Bombs"></a>
     <div id="homepage">
         <h2 id="instructions">Guess which film made more money in the box office.</h2>
         <div class="wrapper">
