--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Box Office Bombs</title>
 </head>
 <body>
-    <a href="about.html"><img src="/images/logo.png" class="logo" alt="Box Office Bombs"></a>
+    <a href="/"><img src="/images/logo.png" class="logo" alt="Box Office Bombs"></a>
     <div id="homepage">
         <h2 id="instructions">Guess which film made more money in the box office.</h2>
         <div class="wrapper">
@@ -48,6 +48,10 @@
             </div>
         </div>
     </div>
+
+    <footer>
+        
+      </footer>
 
     <script src="/js/main.js"></script>
 </body>
