--- a/index.html
+++ b/index.html
@@ -49,9 +49,13 @@
         </div>
     </div>
 
-    <footer>
-        
-      </footer>
+    <footer id="footer">
+        <p id="footertext">© 2021 - Andrew Secco</p> 
+            <div class="ftlinks">
+                <a href="https://github.com/asecco" target="_blank"><i id="github" class="fa fa-github-square fa-3x social"></i></a>
+                <a href="https://www.linkedin.com/in/andrewsecco" target="_blank"><i id="linkedin" class="fa fa-linkedin-square fa-3x social"></i></a>
+            </div>
+    </footer>
 
     <script src="/js/main.js"></script>
 </body>
