Added simple navbar for about page

--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
     <title>Box Office Bombs</title>
 </head>
 <body>
+
+    <div class="navbar">
+        <a href="about.html"><i class="fa fa-address-book"></i></a> 
+      </div>
+
     <a href="/"><img src="/images/logo.png" class="logo" alt="Box Office Bombs"></a>
     <div id="homepage">
         <h2 id="instructions">Guess which film made more money in the box office.</h2>
