About page complete

--- a/about.html
+++ b/about.html
@@ -5,10 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="icon" href="favicon.ico">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:300,400"/>
     <title>Box Office Bombs</title>
 </head>
 <body>
+
+    <a href="/"><img src="/images/logo.png" class="logo" alt="Box Office Bombs"></a>
     
+    <div class="card">
+        <div class="cardname">
+            <h1>Andrew Secco</h1>
+            <h2>This site was developed over the course of a week for the final project in MI 349.</h2>
+        </div>
+        <div class="cardinfo">
+            <div class="cardlinks">
+                <i class="fa fa-github-square fa-2x"></i>
+                <a href="https://github.com/asecco" target="_blank">github.com/asecco</a>
+            </div>
+            <div class="cardlinks">
+                <i class="fa fa-linkedin-square fa-2x"></i>
+                <a href="https://www.linkedin.com/in/andrewsecco" target="_blank">linkedin.com/in/andrewsecco</a>
+            </div>    
+        </div>
+        <div class="cardimage">
+        </div>
+    </div>
+
 </body>
 </html>
