Added more films to db

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <a href="/"><img src="/images/logo.png" class="logo" alt="Box Office Bombs"></a>
     <div id="homepage">
-        <h2 id="instructions">Guess which film made more money in the box office.</h2>
+        <h2 id="instructions">Guess which film made more money in the box office</h2>
         <div class="wrapper">
             <button id="playBtn">Play</button>
         </div>
