Removed file extension from url

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
     <div class="navbar">
-        <a href="about.html"><i class="fa fa-address-book"></i></a> 
+        <a href="/about.html"><i class="fa fa-address-book"></i></a> 
       </div>
 
     <a href="/"><img src="/images/logo.png" class="logo" alt="Box Office Bombs"></a>
