Re-added thumbnails

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="lose-content">
                 <h1 id="loseheader">That was embarrassing...</h1>
                 <h3 id="scoreboard2">You Scored: 0</h3>
-                <!--<img src="images/embarrassing.gif" id="embarrassing" alt="You Lose"/>-->
+                <img src="images/embarrassing.gif" id="embarrassing" alt="You Lose"/>
                 <br>
                 <button id="playAgain">Play Again?</button>    
             </div>
