Added highscore with localstorage

--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
                 <p id="vs">VS</p>
             </div>
         </section>
-        <p id="scoreboard">Score: 0</p>
+        <div id="highscore">High Score: 0</div>
+        <div id="scoreboard">Score: 0</div>
 
         <div id="lose">
             <div class="lose-content">
